[gd_scene load_steps=5 format=3 uid="uid://byppi2jvoulys"]

[ext_resource type="Script" uid="uid://0bhj2qa0udmp" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://bjh5pyapcx7g" path="res://scenes/levels/level1.tscn" id="2_0wfyh"]
[ext_resource type="FontFile" uid="uid://33w5urt3b25u" path="res://assets/fonts/Square-Black.ttf" id="3_sugp2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0wfyh"]
bg_color = Color(0.16503769, 0.77413714, 0.9709435, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 5

[node name="Main" type="Node2D"]
script = ExtResource("1_0wfyh")

[node name="LevelRoot" parent="." instance=ExtResource("2_0wfyh")]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ScorePanel" type="Panel" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0wfyh")

[node name="ScoreLabel" type="Label" parent="HUD/ScorePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -16.0
offset_right = 54.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_sugp2")
theme_override_font_sizes/font_size = 32
text = "SCORE: 0"
